<resources>
    <string name="app_name">Project</string>
    <string name="signup">Sign Up</string>
    <string name="signup_email">E-mail</string>
    <string name="signup_username">Username</string>
    <string name="signup_password">Password</string>
    <string name="multiply_text">Multiply</string>
    <string name="log_n">LOG IN</string>
    <string name="clock_text">Clock</string>
    <string name="analog_clock_text">Analog Clock</string>
    <string name="digital_clock_text">Digital Clock</string>
    <string name="season_text">Season</string>
    <string name="days_text">Days</string>
    <string name="next_day_text">Next Day</string>
    <string name="months_text">Months</string>
    <string name="next_month_text">Next Month</string>
    <string name="remember_digit_text">Remember Digit Game</string>
    <string name="next_button_text">Next</string>
    <string name="check_button_text">Check</string>
    <string name="description_text">Please memorize the numbers on the screen then press next button</string>
    <string name="description2_text">Please enter the numbers you remember and press check button</string>
    <string name="digits_hint">Enter the numbers</string>
    <string name="reverse_description_text">Please memorize the numbers in reverse then press the next button</string>
    <string name="reverse_description2_text">Please reverse the numbers you memorized and press the check button.</string>
    <string name="reverse_remember_digit_text">Reverse Remember Digit Game</string>
    <string name="spelling_activity_text">Spelling</string>
    <string name="spelling_next_button_text">Next Word</string>
    <string name="direction_button_text">Directions</string>
    <string name="direction_hint">Please write the correct direction above with the picture that appears on the screen.</string>


    <string name="january_name">January</string>
    <string name="february_name">February</string>
    <string name="march_name">March</string>
    <string name="april_name">April</string>
    <string name="may_name">May</string>
    <string name="june_name">June</string>
    <string name="july_name">July</string>
    <string name="august_name">August</string>
    <string name="september_name">September</string>
    <string name="october_name">October</string>
    <string name="december_name">December</string>
    <string name="november_name">November</string>


    <string name="days_hint">Click Next Day button to see days of the week.</string>

    <string name="winter_text">Winter</string>
    <string name="spring_text">Spring</string>
    <string name="summer_text">Summer</string>
    <string name="autumn_text">Autumn</string>

    <string name="winter_description">Winter Time</string>
    <string name="spring_description">Spring Time</string>
    <string name="summer_description">Summer Time</string>
    <string name="autumn_description">Autumn Time</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_upüst">Sign Up</string>
    <string name="result_text">Result</string>
    <string name="number2_text">Number 2</string>
    <string name="number1_text">Number 1</string>
    <string name="picture_description">Please click on the image that most similar the one you see above</string>
    <string name="next_picture_text">Next Picture</string>
    <string name="similar_picture">Similar Picture</string>
    <string name="moving_Ball">Moving Ball</string>
    <string name="signup_name">Name</string>
    <string name="games">GAMES</string>
    <string name="clock_txt">Please tick the time you see on the screen</string>


</resources>